SERVER-35441 Make dropDatabase/dropCollection clean up config.tags